cmake_minimum_required(VERSION 2.8)
PROJECT(585)

#add_definitions(-W -Wall -ansi -pedantic -g)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})

FILE(GLOB RENDERER_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Renderer/*.cpp)
FILE(GLOB RENDERER_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/Renderer/*.h)
FILE(GLOB PHYSICS_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Physics/*.cpp)
FILE(GLOB PHYSICS_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/Physics/*.h)
FILE(GLOB COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Common/*.cpp)
FILE(GLOB COMMON_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/Common/*.h)
FILE(GLOB MAIN_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Main/*.cpp)
FILE(GLOB MAIN_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/Main/*.h)
FILE(GLOB UI_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/UI/*.cpp)
FILE(GLOB UI_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/UI/*.h)


set(SOURCES ${UI_SOURCES} ${MAIN_SOURCES} ${RENDERER_SOURCES} ${PHYSICS_SOURCES} ${COMMON_SOURCES} main.cpp)
set(HEADERS ${UI_HEADERS} ${MAIN_HEADERS} ${RENDERER_HEADERS} ${PHYSICS_HEADERS} ${COMMON_HEADERS})



#OpenGL
find_package(OpenGL)
include_directories(${OPENGL_INCLUDE_DIR})


#bullet
find_package(Bullet REQUIRED)
include_directories(${BULLET_INCLUDE_DIR})

#SDL
find_package(SDL REQUIRED)
include_directories(${SDL_INCLUDE_DIR})

ADD_EXECUTABLE(game ${SOURCES})
TARGET_LINK_LIBRARIES(game ${SDL_LIBRARY} ${OPENGL_LIBRARIES} ${BULLET_LIBRARIES} )
